<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logout"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:src="@drawable/ic_logout"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/iv_logout"
        app:layout_constraintTop_toTopOf="@id/iv_logout"
        app:layout_constraintBottom_toBottomOf="@id/iv_logout"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/tv_ask_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_logout"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/iv_logout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logout"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="34dp"
        app:layout_constraintTop_toBottomOf="@id/tv_ask_logout"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/white"
        android:text="@string/confirm"
        app:layout_constraintRight_toLeftOf="@id/btn_cancel"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:background="#c4c4c4"
        android:textColor="@color/white"
        android:text="@string/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_confirm"/>


</androidx.constraintlayout.widget.ConstraintLayout>