<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_siren"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:src="@drawable/ic_siren"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_post"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/iv_siren"
        app:layout_constraintTop_toTopOf="@id/iv_siren"
        app:layout_constraintBottom_toBottomOf="@id/iv_siren"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/tv_report_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_reason"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/iv_siren"
        app:layout_constraintLeft_toLeftOf="@id/iv_siren"
        android:layout_marginTop="24dp" />

    <Spinner
        android:id="@+id/spn_reason"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:entries="@array/report"
        app:layout_constraintLeft_toRightOf="@id/tv_report_reason"
        app:layout_constraintTop_toTopOf="@id/tv_report_reason"
        app:layout_constraintBottom_toBottomOf="@id/tv_report_reason"
        android:layout_marginStart="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reason"
        app:layout_constraintLeft_toLeftOf="@id/tv_report_reason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/spn_reason"
        app:layout_constraintTop_toBottomOf="@id/tv_report_reason"
        android:layout_marginTop="20dp"
        android:visibility="gone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reason"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/report_reason"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="34dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_reason"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toLeftOf="@id/btn_cancel"
        android:background="@color/colorPrimaryLight"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="34dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_confirm"
        android:background="#c4c4c4"
        android:textColor="@color/colorWhite"
        android:text="@string/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>