<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.dsm.dsmmarketandroid.presentation.ui.main.rent.modifyRent.ModifyRentViewModel" />
        <variable
            name="postId"
            type="Integer" />
        <import type="com.dsm.dsmmarketandroid.presentation.util.BindingUtil" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.main.rent.modifyRent.ModifyRentActivity"
        android:id="@+id/cl_modify_rent_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_modify_rent"
            style="@style/ToolBarStyle.Event"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhiteBlack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_black"
            app:title="@string/modify_rent"
            app:titleTextColor="@color/colorBlackWhite" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@null"
            android:hint="@string/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_modify_rent"
            android:text="@={viewModel.title}"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.3dp"
            android:background="@color/colorGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/price"
            app:layout_constraintLeft_toLeftOf="@id/et_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_title"
            android:text="@={viewModel.price}"
            android:digits="0123456789"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time"
            android:textColor="@{viewModel.unit.equals(String.valueOf(0)) ? @color/colorBlackWhite : @color/colorGrey}"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@id/tv_one_hour"
            app:layout_constraintTop_toTopOf="@id/tv_one_hour"
            app:layout_constraintBottom_toBottomOf="@id/tv_one_hour"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> viewModel.selectPriceUnit(0)}"/>

        <TextView
            android:id="@+id/tv_one_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_hour"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@{viewModel.unit.equals(String.valueOf(1)) ? @color/colorBlackWhite : @color/colorGrey}"
            app:layout_constraintRight_toRightOf="@id/et_price"
            app:layout_constraintTop_toTopOf="@id/et_price"
            app:layout_constraintBottom_toBottomOf="@id/et_price"
            android:layout_marginEnd="18dp"
            android:onClick="@{() -> viewModel.selectPriceUnit(1)}"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.3dp"
            android:background="@color/colorGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_price" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_category"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_price">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.category}"
                android:textColor="@color/colorBlackWhite"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="30dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginEnd="18dp"
                android:src="@drawable/ic_down_arrow_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.3dp"
            android:background="@color/colorGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_category" />

        <TextView
            android:id="@+id/tv_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/picture"
            android:textColor="@color/colorGrey"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/et_price"
            app:layout_constraintTop_toBottomOf="@id/cl_category" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_select_image"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="13dp"
            app:layout_constraintLeft_toLeftOf="@id/tv_picture"
            app:layout_constraintTop_toBottomOf="@id/tv_picture"
            android:scaleType="centerCrop"
            bind:image="@{viewModel.photo}"/>

        <Button
            android:id="@+id/btn_modify_time"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/bg_edit_text_grey"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/rental_time"
            android:textColor="@color/colorGrey"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/iv_select_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_picture" />

        <TextView
            android:id="@+id/tv_rent_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.rentTime}"
            app:layout_constraintLeft_toLeftOf="@id/btn_modify_time"
            app:layout_constraintRight_toRightOf="@id/btn_modify_time"
            app:layout_constraintTop_toBottomOf="@id/btn_modify_time"
            app:layout_constraintBottom_toBottomOf="@id/view_picture_line"
            android:textSize="18sp"
            android:textColor="@color/colorBlackWhite"/>

        <View
            android:id="@+id/view_picture_line"
            android:layout_width="0dp"
            android:layout_height="0.3dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_select_image" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/input_content"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_post"
            app:layout_constraintLeft_toLeftOf="@id/et_price"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_picture_line"
            android:text="@={viewModel.content}"/>

        <Button
            android:id="@+id/btn_post"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:text="@string/post_product"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@{viewModel.isModifyEnable ? @drawable/bg_gradient_primary : BindingUtil.convertColorToDrawable(@color/colorGrey_3) }"
            android:clickable="@{viewModel.isModifyEnable}"
            android:onClick="@{() -> viewModel.modifyRent(postId)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>